@@ -1,7 +1,7 @@
 
-                            Less, version 406
+                            Less, version 408
 
-    This is the distribution of less, version 406, released 19 Jun 2007.
+    This is the distribution of less, version 408, released 01 Oct 2007.
     This program is part of the GNU project (http://www.gnu.org).
 
     This program is free software.  You may redistribute it and/or
